Admin part services

--- a/RaelEstateApi/Web.config
+++ b/RaelEstateApi/Web.config
@@ -12,7 +12,7 @@
     <add
             name="RealEstateContext"
             providerName="System.Data.SqlClient"
-            connectionString="Server=.;Database=RealEstateContext;Trusted_Connection=true;"/>
+            connectionString="Server=.\SQLEXPRESS;Database=RealEstateContext;Trusted_Connection=true;"/>
     <!--<add
             name="RealEstateContext"
             providerName="System.Data.SqlClient"
