--- a/RaelEstateApi/RaelEstateApi.csproj
+++ b/RaelEstateApi/RaelEstateApi.csproj
@@ -245,21 +245,37 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\HelpPageApiModel.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
-    <None Include="Scripts\jquery-1.8.2.intellisense.js" />
-    <Content Include="Scripts\jquery-1.8.2.js" />
-    <Content Include="Scripts\jquery-1.8.2.min.js" />
-    <None Include="Scripts\jquery.validate-vsdoc.js" />
-    <Content Include="Scripts\jquery-ui-1.8.24.js" />
-    <Content Include="Scripts\jquery-ui-1.8.24.min.js" />
-    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
-    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
-    <Content Include="Scripts\jquery.validate.js" />
-    <Content Include="Scripts\jquery.validate.min.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Scripts\knockout-2.2.0.debug.js" />
-    <Content Include="Scripts\knockout-2.2.0.js" />
-    <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="RealEstate.html" />
+    <Content Include="Scripts\app.js" />
+    <Content Include="Scripts\app\data.js" />
+    <Content Include="Scripts\app\httpRequester.js" />
+    <Content Include="Scripts\app\view-models.js" />
+    <Content Include="Scripts\app\views.js" />
+    <Content Include="Scripts\libs\class.js" />
+    <None Include="Scripts\libs\jquery-2.0.3.intellisense.js" />
+    <Content Include="Scripts\libs\jquery-2.0.3.js" />
+    <Content Include="Scripts\libs\jquery-2.0.3.min.js" />
+    <None Include="Scripts\libs\kendo.web.min.intellisense.js" />
+    <Content Include="Scripts\libs\kendo.web.min.js" />
+    <Content Include="Scripts\libs\rsvp.min.js" />
+    <Content Include="Scripts\libs\_references.js" />
+    <Content Include="Scripts\partials\login-form.html" />
+    <Content Include="Scripts\partials\login-register.html" />
+    <Content Include="Styles\bootstrap.min.css" />
+    <Content Include="Styles\kendo.common.min.css" />
+    <Content Include="Styles\kendo.default.min.css" />
+    <Content Include="Styles\kendo.silver.min.css" />
+    <Content Include="Styles\main-styles.css" />
+    <Content Include="Styles\Silver\editor.png" />
+    <Content Include="Styles\Silver\imagebrowser.png" />
+    <Content Include="Styles\Silver\loading-image.gif" />
+    <Content Include="Styles\Silver\loading.gif" />
+    <Content Include="Styles\Silver\loading_2x.gif" />
+    <Content Include="Styles\Silver\slider-h.gif" />
+    <Content Include="Styles\Silver\slider-v.gif" />
+    <Content Include="Styles\Silver\sprite.png" />
+    <Content Include="Styles\Silver\sprite_2x.png" />
+    <Content Include="Scripts\libs\jquery-2.0.3.min.map" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -284,7 +300,6 @@
     <Content Include="Images\orderedList7.png" />
     <Content Include="Images\orderedList8.png" />
     <Content Include="Images\orderedList9.png" />
-    <Content Include="Scripts\_references.js" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
