--- a/RaelEstateApi/RaelEstateApi.csproj
+++ b/RaelEstateApi/RaelEstateApi.csproj
@@ -232,6 +232,7 @@
     <Content Include="Content\themes\base\minified\jquery.ui.slider.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
+    <Content Include="Copy of RealEstate.html" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Areas\HelpPage\Views\Web.config" />
@@ -251,6 +252,7 @@
     <Content Include="Scripts\app\httpRequester.js" />
     <Content Include="Scripts\app\view-models.js" />
     <Content Include="Scripts\app\views.js" />
+    <Content Include="Scripts\libs\bootstrap.js" />
     <Content Include="Scripts\libs\class.js" />
     <None Include="Scripts\libs\jquery-2.0.3.intellisense.js" />
     <Content Include="Scripts\libs\jquery-2.0.3.js" />
@@ -259,8 +261,10 @@
     <Content Include="Scripts\libs\kendo.web.min.js" />
     <Content Include="Scripts\libs\rsvp.min.js" />
     <Content Include="Scripts\libs\_references.js" />
+    <Content Include="Scripts\partials\adverts-list.html" />
     <Content Include="Scripts\partials\login-form.html" />
     <Content Include="Scripts\partials\login-register.html" />
+    <Content Include="Scripts\partials\single-advert.html" />
     <Content Include="Styles\bootstrap.min.css" />
     <Content Include="Styles\kendo.common.min.css" />
     <Content Include="Styles\kendo.default.min.css" />
