--- a/RaelEstateApi/RaelEstateApi.csproj
+++ b/RaelEstateApi/RaelEstateApi.csproj
@@ -177,6 +177,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AdminDemo\adverts.html" />
+    <Content Include="AdminDemo\layout.html" />
+    <Content Include="AdminDemo\login-form.html" />
+    <Content Include="AdminDemo\other-products.html" />
+    <Content Include="AdminDemo\productEdit.html" />
+    <Content Include="AdminDemo\products.html" />
+    <Content Include="AdminDemo\single-advert.html" />
+    <Content Include="AdminDemo\template-loader.js" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
@@ -249,6 +257,7 @@
     <Content Include="RealEstate.html" />
     <Content Include="Scripts\app.js" />
     <Content Include="Scripts\app\data.js" />
+    <Content Include="Scripts\app\grid.js" />
     <Content Include="Scripts\app\httpRequester.js" />
     <Content Include="Scripts\app\view-models.js" />
     <Content Include="Scripts\app\views.js" />
@@ -261,6 +270,7 @@
     <Content Include="Scripts\libs\kendo.web.min.js" />
     <Content Include="Scripts\libs\rsvp.min.js" />
     <Content Include="Scripts\libs\_references.js" />
+    <Content Include="Scripts\partials\adverts-list-with-logout.html" />
     <Content Include="Scripts\partials\adverts-list.html" />
     <Content Include="Scripts\partials\login-form.html" />
     <Content Include="Scripts\partials\login-register.html" />
