--- a/RaelEstateApi/RaelEstateApi.csproj
+++ b/RaelEstateApi/RaelEstateApi.csproj
@@ -270,6 +270,7 @@
     <Content Include="Scripts\libs\kendo.web.min.js" />
     <Content Include="Scripts\libs\rsvp.min.js" />
     <Content Include="Scripts\libs\_references.js" />
+    <Content Include="Scripts\partials\admin.html" />
     <Content Include="Scripts\partials\adverts-list-with-logout.html" />
     <Content Include="Scripts\partials\adverts-list.html" />
     <Content Include="Scripts\partials\create-view.html" />
